feat: tmux-suspend

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,17 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tassaron/tmux-df'
+set -g @plugin 'MunifTanjim/tmux-suspend'
 
+set -g @suspend_key 'F12'
+set -g @suspend_suspended_options " \
+  status-left-style::bg=red\\,fg=black bold dim, \
+  window-status-current-style:gw:bg=brightblack\\,fg=black, \
+  window-status-last-style:gw:fg=brightblack, \
+  window-status-style:gw:bg=black\\,fg=brightblack, \
+  @mode_indicator_custom_prompt:: ---- , \
+  @mode_indicator_custom_mode_style::bg=brightblack\\,fg=black, \
+"
 
 set -g history-limit 50000
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
