feat: tmux-sessionizer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,6 +85,10 @@ bind l select-pane -R
 # Same thing for verical layouts
 #bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
+#AWESOME https://github.com/jrmoulton/tmux-sessionizer
+bind-key -n C-j display-popup -E "tms switch"
+bind-key -n C-o display-popup -E "tms"
+
 # split panes using | and -
 # set window split
 
