--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,7 +60,7 @@ bind-key a send-prefix
 set -g base-index 1
 
 # Allows for faster key repetition
-set -s escape-time 50
+set -s escape-time 0
 
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
@@ -72,7 +72,7 @@ setw -g aggressive-resize on
 
 # Activity monitoring
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 
 # hjkl pane traversal
 bind h select-pane -L
