chore: change status left bg color (to be more visible)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set -g status-interval 1
 set -g status-left-length 20
 set -g status-right-length 140
 #set -g status-left '#[fg=green]#H #[default]'
-set -g status-left '#[fg=black,bg=grey,bright] #S #[bg=default,fg=default] '
+set -g status-left '#[bg=default,fg=default] #S '
 set -g status-right ' #[bg=default,bright] #{cpu_fg_color}C:#{cpu_percentage} #{ram_fg_color}R:#{ram_percentage} #[fg=white,bg=default]D:#{df_percent} %a %H:%M:%S#[default] #[fg=blue]%d-%m-%Y'
 
 # C-b is not acceptable -- Vim uses it
@@ -86,7 +86,7 @@ bind l select-pane -R
 #bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
 #AWESOME https://github.com/jrmoulton/tmux-sessionizer
-bind-key -n C-j display-popup -E "tms switch"
+#bind-key -n C-u display-popup -E "tms switch"
 bind-key -n C-o display-popup -E "tms"
 
 # split panes using | and -
