feat: tmux-sessionizer changes (bash sessionizer instead of rust)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,7 @@ set -g status-right ' #[bg=default,bright] #{cpu_fg_color}C:#{cpu_percentage} #{
 set-option -g prefix C-a
 bind-key C-a last-window
 bind-key a send-prefix
+bind -n C-k clear-history
 
 # Start numbering at 2
 set -g base-index 1
@@ -80,14 +81,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# hjkl pane traversal with windows key
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
+
 # set to main-horizontal, 66% height for main pane
 #bind m run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-horizontal -p 66"
 # Same thing for verical layouts
 #bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
-#AWESOME https://github.com/jrmoulton/tmux-sessionizer
-#bind-key -n C-u display-popup -E "tms switch"
-bind-key -n C-o display-popup -E "tms"
+bind-key -n C-o display-popup -E "tmux-sessionizer"
 
 # split panes using | and -
 # set window split
