--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,11 @@ set -g status-right ' #[bg=default,bright] #{cpu_fg_color}C:#{cpu_percentage} #{
 set-option -g prefix C-a
 bind-key C-a last-window
 bind-key a send-prefix
-bind -n C-k clear-history
+bind -n C-k send-keys C-l \; clear-history
+
+# switch clients
+bind -n C-[ switch-client -p
+bind -n C-] switch-client -n
 
 # Start numbering at 2
 set -g base-index 1
