feat: copy from ssh tmux session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,8 @@ set -g @suspend_suspended_options " \
   @mode_indicator_custom_mode_style::bg=brightblack\\,fg=black, \
 "
 
+set -g set-clipboard on
+#set -g allow-passthrough on
 set -g history-limit 50000
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 
